[package]
name = "scnr-engine"
version = "1.0.0"
authors = ["Tasos Laskos <tasos.laskos@gmail.com>"]

[dependencies]
#rutie = "0.9.0"
regex = "0.2.1"
lazy_static = "1.4.0"
#clippy = "*"
fnv = "1.0.5"
url = "1.6.0"
html5ever = "0.21.0"
tendril = "0.4.0"

#[dependencies.ruru]
#git = "https://github.com/d-unseductable/ruru.git"

[dependencies.rutie]
git = "https://github.com/danielpclark/rutie.git"

#[dependencies.clippy]
#git = "https://github.com/rust-lang-nursery/rust-clippy.git"

[lib]
crate-type = ["dylib"]
