[package]
name = "scnr-engine"
version = "1.0.0"
authors = ["Tasos Laskos <tasos.laskos@gmail.com>"]

[dependencies]
magnus = "0.6.2"
regex = "1.7.2"
lazy_static = "1.4.0"
#clippy = "*"
fnv = "1.0.5"
url = "1.6.0"
html5ever = "0.26.0"
tendril = "0.4.3"

#[dependencies.clippy]
#git = "https://github.com/rust-lang-nursery/rust-clippy.git"

[lib]
name = "scnr_engine"
crate-type = ["cdylib"]
